k8s/echo/api.pod.yml
# https://kubernetes.io/docs/concepts/workloads/pods/pod-overview/
# kubectl apply -f echo.pod.yml -v=9
# kubectl kubectl get pods -o wide -v=9
# kubectl describe pods echo-pod
# kubectl exec -it echo-pod sh
# kubectl port-forward pod/echo-pod 80:80
# kubectl delete -f echo.pod.yml -v=9
apiVersion: v1
kind: Pod
metadata:
  name: echo-pod
  labels:
    app: echo
spec:
  containers:
    - name: echo-pod-container
      image: lnhcode/echo # 镜像
      #imagePullPolicy: Always # 每次都获取最新的镜像
      ports:
        - containerPort: 80
      livenessProbe:
        httpGet:
          scheme: HTTP
          path: /
          port: 80
          httpHeaders:
            - name: X-User-Agent
              value: K8S_HEALTH_CHECK
        initialDelaySeconds: 60
        timeoutSeconds: 5
        periodSeconds: 10
