k8s/echo/echo.service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
