k8s/echo/echo.nginx.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: echo-service
              servicePort: 80
