k8s/echo/echo.traefik.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-traefik-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: echo-service
              servicePort: 80
